# FEbot

./: .env.example  .gitignore  =9.0.0  AGENT.md  CLAUDE.md  README.md  bash.exe.stackdump  febot.service  pyproject.toml  requirements.txt  提案書.md
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml
data/: ipa_manifest.yaml
data/corpus/: glossary.md  ipa-fe-2016h28a-written-am-ans.md  ipa-fe-2016h28a-written-am-qs.md  ipa-fe-2016h28a-written-pm-ans.md  ipa-fe-2016h28a-written-pm-cmnt.md  ipa-fe-2016h28a-written-pm-qs.md  ipa-fe-2017h29a-written-am-ans.md  ipa-fe-2017h29a-written-am-qs.md  ipa-fe-2017h29a-written-pm-ans.md  ipa-fe-2017h29a-written-pm-cmnt.md  ipa-fe-2017h29a-written-pm-qs.md  ipa-fe-2018h30a-written-am-ans.md  ipa-fe-2018h30a-written-am-qs.md  ipa-fe-2018h30a-written-pm-ans.md  ipa-fe-2018h30a-written-pm-cmnt.md  ipa-fe-2018h30a-written-pm-qs.md  ipa-fe-2023r05-cbt-kamoku-a-ans.md  ipa-fe-2023r05-cbt-kamoku-a-qs.md  ipa-fe-2023r05-cbt-kamoku-b-ans.md  ipa-fe-2023r05-cbt-kamoku-b-qs.md  ipa-fe-2024r06-cbt-kamoku-a-ans.md  ipa-fe-2024r06-cbt-kamoku-a-qs.md  ipa-fe-2024r06-cbt-kamoku-b-ans.md  ipa-fe-2024r06-cbt-kamoku-b-qs.md  ipa-fe-syllabus-ver9-2.md  (+19 more)
docs/: 20260405-fe-slack-rag-proposal.md  20260405-implementation.md  20260405-ipa-corpus.md  20260419-ci-cd-quality.md  20260425-change-sync-policy.md  20260425-ci-sync-check.md  20260425-skill-sync-policy.md  20260428-content-filter.md
scripts/: check_sync.py  extract_syllabus_yogo.py  ingest.py  ipa_build_corpus.py  migrate_to_supabase.py
tests/: test_content_filter.py  test_smoke.py
(+11 files in other folders)
